// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBarNew it should render large 1`] = `
<nav
  className="navbar fixed-top navbar-expand-sm navbar-light bg-light"
>
  <div
    className="container"
  >
    <a
      aria-current="page"
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="d-inline-block align-top"
        height="30"
        src="logo.png"
        width="30"
      />
       
      Verite Data Science
    </a>
    <div
      className="navbar-collapse collapse"
    >
      <div
        className="mx-auto"
      />
      <a
        className="nav-link"
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
      <a
        className="nav-link"
        href="/contact"
        onClick={[Function]}
      >
        Contact
      </a>
    </div>
  </div>
</nav>
`;

exports[`NavBarNew it should render small 1`] = `
<div
  width="400px"
>
  <nav
    className="navbar fixed-top navbar-expand-sm navbar-light bg-light"
  >
    <div
      className="container"
    >
      <a
        aria-current="page"
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="30"
          src="logo.png"
          width="30"
        />
         
        Verite Data Science
      </a>
      <div
        className="navbar-collapse collapse"
      >
        <div
          className="mx-auto"
        />
        <a
          className="nav-link"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          className="nav-link"
          href="/contact"
          onClick={[Function]}
        >
          Contact
        </a>
      </div>
    </div>
  </nav>
</div>
`;
